fix alignment on footer copy

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -201,11 +201,11 @@ button {
 }
 
 footer {
-	position: absolute;
-	left: 45%;
-	bottom: 0;
+	display: block;
+	margin: 20px auto;
 	font-size: 12px;
 	color: #909090;
+	text-align: center;
 }
 
 #correct {
